--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,8 @@
 *,
 ::after,
 ::before {
-  font-family: var(--font-inter), "Segoe UI", Tahoma, Geneva, Verdana,
-    sans-serif;
+   font-family: var(--font-inter), -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
+                'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 
+                'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 
+                'Noto Color Emoji';
 }
